--- a/index.html
+++ b/index.html
@@ -23,6 +23,23 @@
             font-size: 16px;
             cursor: pointer;
         }
+
+        .login-container {
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        .login-form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .login-input {
+            margin: 5px;
+            padding: 8px;
+            font-size: 14px;
+        }
     </style>
 </head>
 <body>
@@ -34,9 +51,33 @@
     <button class="button" onclick="afiseazaMesaj('Butonul 4 apăsat')">Butonul 4</button>
 </div>
 
+<div class="login-container">
+    <h2>Login</h2>
+    <form class="login-form" onsubmit="return login()">
+        <input type="text" class="login-input" id="username" placeholder="Username" required>
+        <input type="password" class="login-input" id="password" placeholder="Password" required>
+        <button type="submit" class="button">Login</button>
+    </form>
+</div>
+
 <script>
     function afiseazaMesaj(mesaj) {
         alert(mesaj);
+    }
+
+    function login() {
+        var username = document.getElementById('username').value;
+        var password = document.getElementById('password').value;
+
+        // Add your authentication logic here
+        // For simplicity, let's assume a hardcoded username and password
+        if (username === 'user' && password === 'password') {
+            alert('Login successful');
+            return true;
+        } else {
+            alert('Invalid username or password');
+            return false;
+        }
     }
 </script>
 
